add messaging conversations and latest migrations
